<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
                android:id="@+id/usd_mnu_item"
                android:title="@string/currency_usd" />
        <item
                android:id="@+id/rub_mnu_item"
                android:title="@string/currency_rub" />
        <item
                android:id="@+id/eur_mnu_item"
                android:title="@string/currency_eur" />
        <item
                android:id="@+id/cad_mnu_item"
                android:title="@string/currency_cad" />
        <item
                android:id="@+id/aud_mnu_item"
                android:title="@string/currency_aud" />
        <item
                android:id="@+id/inr_mnu_item"
                android:title="@string/currency_inr" />
    </group>
</menu>