<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
            android:id="@+id/divider9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_period_label" />

    <View
            android:id="@+id/divider8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_next_charge_date_label" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

    <TextView
            android:id="@+id/info_loan_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_type_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
            android:id="@+id/info_debtor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_name_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_loan_type_label" />

    <TextView
            android:id="@+id/info_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_debtor_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_loan_type_tv"
            tools:text="Arthur The K" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_phone_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_debtor_name" />

    <TextView
            android:id="@+id/info_loan_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_loan_type_label"
            app:layout_constraintStart_toEndOf="@id/barrier2"
            tools:text="Incoming" />

    <TextView
            android:id="@+id/info_phone_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/info_name_tv"
            tools:text="89372933279" />

    <TextView
            android:id="@+id/info_start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_date_start_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <TextView
            android:id="@+id/info_start_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_start_date_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_name_tv"
            tools:text="Apr 20, 2020" />

    <TextView
            android:id="@+id/info_end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_date_end_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_start_date_label" />

    <TextView
            android:id="@+id/info_end_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_end_date_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_start_date_tv"
            tools:text="Apr 30, 2020" />

    <TextView
            android:id="@+id/info_start_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_start_amount_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
            android:id="@+id/info_current_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_end_amount_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_start_amount_label" />

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="info_debtor_name,info_loan_type_label,info_start_date_label,info_end_date_label,info_start_amount_label,info_current_amount_label,info_next_charge_date_label,info_interest_rate_label,info_loan_id_label"
            tools:layout_editor_absoluteX="411dp" />

    <TextView
            android:id="@+id/info_start_amount_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_start_amount_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_end_date_tv"
            tools:text="5,600" />

    <TextView
            android:id="@+id/info_current_amount_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_current_amount_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_start_amount_tv"
            tools:text="6,546" />

    <TextView
            android:id="@+id/info_next_charge_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_next_date_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_end_date_label" />

    <TextView
            android:id="@+id/info_next_accrual_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_next_charge_date_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_end_date_tv"
            tools:text="Apr 25, 2020" />

    <TextView
            android:id="@+id/info_interest_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/info_activity_loan_interest_rate_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_current_amount_label" />

    <TextView
            android:id="@+id/info_interest_rate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_interest_rate_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_current_amount_tv"
            tools:text="14.5%" />

    <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_note_tv" />

    <TextView
            android:id="@+id/info_loan_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_activity_loan_id_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <TextView
            android:id="@+id/info_id_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_loan_id_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_interest_rate_tv"
            tools:text="42" />

    <TextView
            android:id="@+id/info_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/info_activity_loan_note_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_loan_id_label" />

    <TextView
            android:id="@+id/info_note_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textMultiLine"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_note_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/info_id_tv" />

    <TextView
            android:id="@+id/info_period_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_activity_loan_interest_period_label"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/info_interest_rate_label" />

    <TextView
            android:id="@+id/info_period_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/list_item_empty_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_period_label"
            app:layout_constraintStart_toStartOf="@+id/info_interest_rate_tv"
            tools:text="2 Weeks" />

    <View
            android:id="@+id/divider7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>